--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 *{
     margin: 0;
     padding: 0;
+    border-radius: 40px;
 }
 .logo{
     font-weight: bold;
     font-family: Roboto;
     font-size: 30px;
     margin: 10px;
+}
+.low{
+    font-size: 30px;
+    font-family: roboto;
+    text-align: start;
+    justify-content: flex-start;
 }
 nav ul{
     display: flex;
